Fix card image sizing so it's always consistent (images are cropped if they are higher)

--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ strong {
     background: rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.5); }
     .site-header form input[type=search] {
+      max-width: 200px;
       background: transparent;
       border: 0;
       padding: 0.5rem;
@@ -142,7 +143,8 @@ strong {
     height: 100%; }
     .card .card-inner .card-top {
       position: relative;
-      overflow: hidden; }
+      overflow: hidden;
+      height: 200px; }
       .card .card-inner .card-top:before {
         content: '';
         position: absolute;
@@ -162,6 +164,12 @@ strong {
         display: block;
         width: 100%;
         transition: transform 0.3s ease;
+        /**
+				 * height: 100% with object-fit and object-position allow us to use
+				 * the fixed height and width of the container to crop where we want to.
+				 * Super useful for images that are different ratios but we want them to appear consistent!
+				 */
+        height: 100%;
         object-fit: cover;
         object-position: center center; }
     .card .card-inner .card-text {
